# irene-b

./: CONTRIBUTING.md  METHODOLOGY.md  README.md  pyproject.toml
incidents/: phishing_credential_theft.yaml
src/irene/: __init__.py  cli.py  harness.py  incident.py  models.py  providers.py  resolver.py  runner.py  scorer.py
tests/: test_harness.py  test_providers_and_judge.py  test_resolver.py
