[project]
name = "irene"
version = "0.1.0"
description = "Incident Response End-to-End (IRENE) — an agentic benchmark for evaluating LLMs across the incident response lifecycle."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Install only the backend you use; both are imported lazily.
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0"]

[project.scripts]
irene = "irene.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/irene"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
